--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:github": "ng build --configuration production --base-href /predora/",
+    "build:github": "ng build --configuration production --base-href /Predora.ai/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
