Material Design redesign with FarmVista green theme
- Angular Material 19 with responsive sidenav

- Green color scheme and logo

- Fixed card alignment and zoom responsiveness

- Enhanced dashboard with charts

--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "outputPath": "dist/predora",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "baseHref": "/Predora.ai/",
+            "baseHref": "/",
             "polyfills": [
               "zone.js"
             ],
